--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   lottie: ^2.0.0
   google_fonts: ^3.0.1
+  flutter_riverpod: ^2.1.1
 
   flutter_animated_button: ^2.0.2
   flutter:
