--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  speech_to_text: ^2.7.0
   animate_do: ^3.0.2
+  riverpod: ^2.1.1
+  alan_voice: ^3.10.0
 
 dev_dependencies:
   flutter_test:
