--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,15 +32,12 @@ dependencies:
   lottie: ^2.0.0
   google_fonts: ^3.0.1
   flutter_riverpod: ^2.1.1
+  firebase_core: ^2.4.0
+  firebase_auth: ^4.2.1
 
   flutter_animated_button: ^2.0.2
   flutter:
-
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animate_do: ^3.0.2
   riverpod: ^2.1.1
