--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_riverpod: ^2.1.1
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.1
+  fluttertoast: ^8.1.2
 
   flutter_animated_button: ^2.0.2
   flutter:
