--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.1
   fluttertoast: ^8.1.2
+  cloud_firestore: ^4.2.0
 
   flutter_animated_button: ^2.0.2
   flutter:
