arayuz degistirildi pop up menu eklendi

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   animate_do: ^3.0.2
   riverpod: ^2.1.1
   alan_voice: ^3.10.0
+  msh_checkbox: ^2.0.0
+  roundcheckbox: ^2.0.5
 
 dev_dependencies:
   flutter_test:
