task screene invite people eklendi task screem.dart dosyasinin en altindaki methoda bakin orada cozemeedigim bi hata var task screene project screenden gelen proje var ya ona o method icerisinde erisemedim cunku sadece state classinin icindekilere erisebiliyorum, static yapmam cozume ulastirmadi cunku proje constructorin ciinde kullanildigi icin hata verdi klitorisin yeri = mechul

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   riverpod: ^2.1.1
   msh_checkbox: ^2.0.0
   roundcheckbox: ^2.0.5
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
